Fix right click functionality after visible contextmenu

--- a/context/src/index.css
+++ b/context/src/index.css
@@ -11,6 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-*{
+
+* {
+  list-style-type: none;
   list-style: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
